Another attempt to fix the background image issue on iOS.

--- a/css/designsprint.css
+++ b/css/designsprint.css
@@ -8,7 +8,7 @@ body, html {
 }
 
 header {
-    background-attachment: fixed;
+    /*background-attachment: fixed;*/
     background-image: url(../images/writing/designsprint/photo-sketching-blackandwhite.jpg);
     background-position: 50% 100%;
     background-size: cover;
